--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "@polymer/paper-dialog": "^3.0.1",
     "@polymer/paper-icon-button": "^3.0.2",
     "@polymer/polymer": "^3.1.0",
-    "oe-date": "git+http://evgit/oecloud.io/oe-date.git#2.3.0",
-    "oe-i18n-msg": "git+http://evgit/oecloud.io/oe-i18n-msg.git#2.2.0",
-    "oe-input": "git+http://evgit/oecloud.io/oe-input.git#2.3.0",
-    "oe-mixins": "git+http://evgit/oecloud.io/oe-mixins.git#2.3.0",
-    "oe-utils": "git+http://evgit/oecloud.io/oe-utils.git#2.3.0"
+    "oe-date": "^2.0.0",
+    "oe-i18n-msg": "^2.0.0",
+    "oe-input": "^2.0.0",
+    "oe-mixins": "^2.0.0",
+    "oe-utils": "^2.0.0"
   },
   "devDependencies": {
     "@polymer/iron-demo-helpers": "^3.0.2",
